Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12951

LL_IOC_GETOBDCOUNT return wrong MDT counts

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      We used llapi_get_obd_count() to get MDT/OST counts, which call LL_IOC_GETOBDCOUNT
      internally.

      However, we return lmv->lmv_mdt_descs.ltd_tgts_size as MDT count, this is not right.
      @ltd_tgts_size could be larger than actual MDT count, as we preallocate ltd_tgts and resize it if necessary.

            wshilong Wang Shilong (Inactive)
            wshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: